Wed Nov 27 07:13:54 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: psych version 2.0.2
	* ext/psych/psych.gemspec: ditto

Wed Nov 27 06:40:18 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: fix support for negative
	  years.
	* ext/psych/lib/psych/visitors/yaml_tree.rb: ditto
	* test/psych/test_date_time.rb: test for change.
	  Fixes: https://github.com/tenderlove/psych/issues/168

Wed Nov 27 04:46:55 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: fix regexp for matching TIME
	  strings.
	* test/psych/test_date_time.rb: test for change.
	  Fixes: https://github.com/tenderlove/psych/issues/171

Wed Nov 27 02:26:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_new4): copy the original capacity so that memsize of
	  frozen shared string returns correct size.

Wed Nov 27 02:20:13 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_hash): should not ignore the rest of recursive
	  constructs.

	* hash.c (rb_hash_hash): ditto.

	* range.c (range_hash): ditto.

	* struct.c (rb_struct_hash): ditto.

	* test/-ext-/test_recursion.rb (TestRecursion): separate from
	  test/ruby/test_thread.rb.

Tue Nov 26 22:43:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash): cut off if recursion detected to get rid of stack
	  overflow.  [ruby-core:58567] [Bug #9151]

Tue Nov 26 20:02:39 2013  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_settracefunc.rb: add tests for a_call/a_return
	  by Brandur <brandur@mutelight.org> [Feature #9120]

Tue Nov 26 19:29:52 2013  Koichi Sasada  <ko1@atdot.net>

	* common.mk: add useful config "set breakpoint pending on"
	  for run.gdb.

Tue Nov 26 19:17:47 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c (newobj_i): skip class_path if class
	  is frozen.

	  rb_class_path() can modify frozen classes (and causes errors).